--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 		<!-- video tag in html-->
 
 
-			<video width="500" controls autoply="">
-					<source src="Part2vid.mp4" type="video/mp4">
-		
+			
 				</video>
 
 			<video width="500" controls>
@@ -87,7 +85,24 @@
 					</video>
 
 
-	
+	<!--iframe tag-->
+				
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241316.22897994606!2d72.71413162639256!3d19.082806699271178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6306644edc1%3A0x5da4ed8f8d648c69!2sMumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1768493536745!5m2!1sen!2sin" width="500" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+				
+		
+				<iframe src="https://mmd430503-dotcom.github.io/MJ-Khan/" width="500" height="280">
+
+
+
+				</iframe>	
+
+				<iframe src="Nato.pdf" width="500" height="280">
+
+				</iframe>
+
+
 
 
 
