--- a/index.html
+++ b/index.html
@@ -4,6 +4,54 @@
 </head>
 
 <body>
+<!--forms in html -->
+
+
+<form>
+    <p>
+    First name : <input type="text" placeholder="Enter your First " autofocus>
+     </p> 
+    </p>
+    <p>
+    Last name : <input type="text" placeholder="Enter your last name ">
+     </p>
+    <p>
+ Address : <input type="text" placeholder="Please Enter your Address " size="50">
+   </p>
+   
+ <p>
+ city : <input type="text"  value="Mumabi" disabled>
+   </p>
+   <p>
+ State : <input type="text"  autocapitalize="on" maxlength="10">
+   </p>
+        
+   <p>
+ Mobile Number : <input type="number"  required>
+   </p>
+<p>
+ Email : <input type="email">
+   </p>
+
+<p>
+  Date :<input type="date">
+   </p>
+   <p>
+Time : <input type="time">
+   </p>
+<p>
+ <input type="submit">
+   </p>
+
+
+
+
+
+
+
+
+
+</form>
 <font size="5" face="i">
   <marquee bgcolor="yellow" scrollamount="10px"> Tranding : 1) Im louching new you tube course <font color="red" > with Rs .99/- only/- </marquee>
 
