--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
    <p>
 Time : <input type="time">
    </p>
+	<p>
+        User Id : <input type="text">
+            Password : <input type="password">
+         </p>
+	<p>
+         prize range: <input type="range" min="1000" max="5000">
+         </p>
 <p>
  <input type="submit">
    </p>
@@ -160,3 +167,4 @@ Time : <input type="time">
 </body>
 
 </html>
+
