--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <p>
     Last name : <input type="text" placeholder="Enter your last name ">
      </p>
+	<p>
+            <input type="radio" name="gender"> Male
+            <input type="radio" name="gender"> Female
+            <input type="radio" name="gender"> Transgender
+         </p>
     <p>
  Address : <input type="text" placeholder="Please Enter your Address " size="50">
    </p>
@@ -167,4 +172,5 @@ Time : <input type="time">
 </body>
 
 </html>
+
 
