--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ Time : <input type="time">
          </p>
 <p>
  <input type="submit">
+ <input type="reset">
+
    </p>
 
 
@@ -172,5 +174,6 @@ Time : <input type="time">
 </body>
 
 </html>
+
 
 
