--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>
     Last name : <input type="text" placeholder="Enter your last name ">
      </p>
-	<p>
+	<p> Gender:<br> 
             <input type="radio" name="gender"> Male
             <input type="radio" name="gender"> Female
             <input type="radio" name="gender"> Transgender
@@ -174,6 +174,7 @@ Time : <input type="time">
 </body>
 
 </html>
+
 
 
 
