--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Time : <input type="time">
          prize range: <input type="range" min="1000" max="5000">
          </p>
 <p>
- <input type="submit">
+ <input type="submit" color="red">
  <input type="reset">
 
    </p>
@@ -174,6 +174,7 @@ Time : <input type="time">
 </body>
 
 </html>
+
 
 
 
