--- a/index.html
+++ b/index.html
@@ -4,44 +4,58 @@
     <title>Terix Vision 10</title>
 
     <style>
+        /* ===== BODY ===== */
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #74ebd5, #ACB6E5);
             margin: 0;
             padding: 0;
+            background: linear-gradient(120deg, #84fab0, #8fd3f4);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* CENTERED LOGIN FORM */
+        /* ===== LOGIN FORM ===== */
         #loginForm {
             background: white;
-            width: 350px;
-            padding: 40px;
-            margin: 100px auto;
-            border-radius: 10px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            width: 360px;
+            padding: 50px 40px;
+            border-radius: 15px;
+            box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+            text-align: center;
+            animation: fadeIn 1s ease-in-out;
         }
 
         #loginForm h2 {
-            text-align: center;
             margin-bottom: 30px;
             color: #333;
+            font-size: 28px;
         }
 
         #loginForm input[type="text"],
         #loginForm input[type="password"] {
             width: 100%;
-            padding: 12px;
+            padding: 14px;
             margin: 10px 0 20px 0;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 8px;
+            font-size: 16px;
+            transition: 0.3s;
+        }
+
+        #loginForm input:focus {
+            border-color: #4CAF50;
+            box-shadow: 0 0 5px #4CAF50;
+            outline: none;
         }
 
         #loginForm button {
             width: 100%;
-            padding: 12px;
+            padding: 14px;
             background: #4CAF50;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             color: white;
             font-size: 16px;
             cursor: pointer;
@@ -55,43 +69,12 @@
         .error {
             color: red;
             display: none;
-            text-align: center;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
-        /* DASHBOARD STYLING */
-        #dashboard {
-            display: none;
-            padding: 20px;
-            background: #f5f5f5;
-        }
-
-        .card {
-            display: inline-block;
-            background: white;
-            padding: 20px;
-            margin: 10px;
-            width: 180px;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        }
-
-        #dashboard h2 {
-            color: #333;
-        }
-
-        #dashboard button {
-            background: #f44336;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #dashboard button:hover {
-            background: #d32f2f;
+        @keyframes fadeIn {
+            from {opacity: 0; transform: translateY(-20px);}
+            to {opacity: 1; transform: translateY(0);}
         }
     </style>
 
@@ -110,6 +93,88 @@
         }
     </script>
 </head>
+
+<body>
+
+<!-- ================= LOGIN FORM ================= -->
+<div id="loginForm">
+    <h2>Terix Vision Login</h2>
+
+    <p class="error" id="errorMsg">Wrong username or password</p>
+
+    <input type="text" id="username" placeholder="Enter User ID">
+    <input type="password" id="password" placeholder="Enter Password">
+
+    <button onclick="login()">Login</button>
+</div>
+
+<!-- ================= DASHBOARD ================= -->
+<div id="dashboard" style="display:none;">
+   <!-- ======= TUMHARA PEHLE WALA DASHBOARD CODE ======= -->
+   <!-- Dashboard content ko maine bilkul waise hi chod diya hai -->
+   <form>
+    <p>First name : <input type="text" placeholder="Enter your First " autofocus></p>
+    <p>Last name : <input type="text" placeholder="Enter your last name "></p>
+    <p>Gender:<br>
+        <input type="radio" name="gender"> Male
+        <input type="radio" name="gender"> Female
+        <input type="radio" name="gender"> Transgender
+    </p>
+    <p>Address : <input type="text" placeholder="Please Enter your Address " size="50"></p>
+    <p>City : <input type="text"  value="Mumabi" disabled></p>
+    <p>State : <input type="text"  autocapitalize="on" maxlength="10"></p>
+    <p>Mobile Number : <input type="number"  required></p>
+    <p>Email : <input type="email"></p>
+    <p>Date :<input type="date"></p>
+    <p>Time : <input type="time"></p>
+    <p>User Id : <input type="text"> Password : <input type="password"></p>
+   </form>
+
+   <form oninput="x.value=parseInt(pr.value)">
+    Prize range: <input type="range" id="pr" min="1000" max="10000"> Rs. <output name="x" for="pr"></output>
+   </form>
+
+   <input type="submit" color="red">
+   <input type="reset">
+
+   <marquee bgcolor="yellow" scrollamount="10px">Tranding : 1) Im louching new YouTube course <font color="red">with Rs .99/- only</font></marquee>
+
+   <h1>Hi everyone, this page has all model images and names</h1>
+   <ul>
+       <li><a href="i1.jpg">Pooja</a></li>
+       <li><a href="i2.jpg">Geeta</a></li>
+       <li><a href="i3.jpg">Rashmi</a></li>
+       <li><a href="i4.jpg">Neha</a></li>
+       <li><a href="i5.jpg">Reshma</a></li>
+   </ul>
+
+   <hr size="2" color="green">
+
+   <ol>
+       <li><a href="i1.jpg"><img src="i1.jpg" width="50"></a><br>Pooja</li>
+       <li><a href="i2.jpg"><img src="i2.jpg" width="50"></a><br>Geeta</li>
+       <li><a href="i3.jpg"><img src="i3.jpg" width="50"></a><br>Rashmi</li>
+       <li><a href="i4.jpg"><img src="i4.jpg" width="50"></a><br>Neha</li>
+       <li><a href="i5.jpg"><img src="i5.jpg" width="50"></a><br>Reshma</li>
+   </ol>
+
+   <a href="https://www.youtube.com/channel/UCoXWO1XgyCs_1kFI5MTMDfg">Terix Vision Channel</a>
+
+   <br><br>
+
+   <video width="500" controls>
+       <source src="Part3vid.mp4" type="video/mp4">
+   </video>
+
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241316.22897994606!2d72.71413162639256!3d19.082806699271178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6306644edc1%3A0x5da4ed8f8d648c69!2sMumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1768493536745!5m2!1sen!2sin" width="500" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+   <iframe src="Nato.pdf" width="500" height="280"></iframe>
+
+   <button onclick="location.reload()">Logout</button>
+</div>
+
+</body>
+</html></head>
 
 <body>
 
@@ -295,3 +360,4 @@ Time : <input type="time">
 
 </body>
 </html>
+
