--- a/index.html
+++ b/index.html
@@ -289,9 +289,15 @@ Time : <input type="time">
 				<iframe src="Nato.pdf" width="500" height="280">
 
 				</iframe>
+	
+					<br>
+					<br>
+					<br>
 
-    <button onclick="location.reload()">Logout</button>
+   <p align="center">  <button onclick="location.reload()">Logout</button>  </p>
+
 </div>
 
 </body>
 </html>
+
