--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Terix Vision 10</title>
+    <title>Terix Vision 10</title> 
+	<link rel="icon" type="image/png" href="fav/favicon-16x16.png">
 
     <style>
         body {
@@ -300,4 +301,5 @@ Time : <input type="time">
 
 </body>
 </html>
+
 
